syntax = "proto3";

package activities;

// Service Definition
service ActivityService {
  rpc CreateActivity (CreateActivityRequest) returns (ActivityResponse);
  rpc UpdateActivity (UpdateActivityRequest) returns (ActivityResponse);
  rpc DeleteActivity (DeleteActivityRequest) returns (Empty);
  rpc GetActivity (GetActivityRequest) returns (ActivityResponse);
  rpc ListActivities (ListActivitiesRequest) returns (ListActivitiesResponse);
}

// Messages for creating an activity
message CreateActivityRequest {
  string title = 1;
  string description = 2;
  string start_date = 3;  // ISO formatted date string
  string end_date = 4;    // ISO formatted date string
  int32 owner_id = 5;
}

// Messages for updating an activity
message UpdateActivityRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string start_date = 4;  // ISO formatted date string
  string end_date = 5;    // ISO formatted date string
}

// Messages for deleting an activity
message DeleteActivityRequest {
  int32 id = 1;
}

// Messages for getting an activity by ID
message GetActivityRequest {
  int32 id = 1;
}

// Response structure for activity data
message ActivityResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string start_date = 4;  // ISO formatted date string
  string end_date = 5;    // ISO formatted date string
  int32 owner_id = 6;
}

// Request and response for listing all activities
message ListActivitiesRequest {}

message ListActivitiesResponse {
  repeated ActivityResponse activities = 1;
}

// Empty response used for deletions
message Empty {}